--- a/src/AppBundle/Resources/views/Colegiado/edit.html.twig
+++ b/src/AppBundle/Resources/views/Colegiado/edit.html.twig
@@ -6,7 +6,10 @@
 {% block javascripts %}
     {{ parent() }}
     <script type="text/javascript">
+        window.onload = function () {
+            $("#appbundle_colegiado_localidad").removeAttr("required");
 
+        };
         $(document).ready(function () {
         {#$('#appbundle_colegiado_submit').click(function () {
             var frm = document.getElementsByClassName("tipoDomicilio");
