--- a/src/AppBundle/Resources/views/Colegiado/new.html.twig
+++ b/src/AppBundle/Resources/views/Colegiado/new.html.twig
@@ -3,6 +3,26 @@
 {% block content_title %}
     Formulario de Alta
 {% endblock %}
+{% block javascripts %}
+    {{ parent() }}
+    <script type="text/javascript">
+        window.onload = function () {
+           $("#appbundle_colegiado_localidad").removeAttr("required");
+
+        };
+        $(document).ready(function () {
+        {#$('#appbundle_colegiado_submit').click(function () {
+            var frm = document.getElementsByClassName("tipoDomicilio");
+            for (i = 0; i < frm.elements.length; i++)
+            {
+                frm.elements[i].value
+            }
+        });#}
+
+            });
+
+    </script>
+{% endblock javascripts %}    
 
 {% block content -%}
     <div class="row">
