arreglo a show colegiado

--- a/src/AppBundle/Resources/views/Colegiado/show.html.twig
+++ b/src/AppBundle/Resources/views/Colegiado/show.html.twig
@@ -311,7 +311,7 @@
                                             <tbody>
                                                 <tr>
                                                     <th>Fecha de ingreso </th>
-                                                    <td>{{ entity.fechaIngreso is null ? "" :documento.fechaIngreso|date("d-m-Y") }}</td>
+                                                    <td>{{ documento.fechaIngreso is null ? "" :documento.fechaIngreso|date("d-m-Y") }}</td>
                                                 </tr>
                                                 <tr>
                                                     <th>Descripcion </th>
