--- a/src/AppBundle/Resources/views/Colegiado/index.html.twig
+++ b/src/AppBundle/Resources/views/Colegiado/index.html.twig
@@ -1,18 +1,79 @@
 {% extends 'ThemeBundle:Default:layout_base.html.twig' %}
 
 {% block title %}
-    Colegiado
+    Colegiados
 {% endblock title %}
 
-{% block content -%}
+{% block content_title %}
+    Colegiados
+{% endblock content_title %}
 
+{% block content -%}
+    <div class="row">
+        <div class="col-xs-12">
+            <div class="box">
+                <div class="box-header with-border">
+                    <h3 class="box-title">Filtros</h3>
+                    <div class="box-tools pull-right">
+                        <button title="" data-toggle="tooltip" data-widget="collapse" class="btn btn-box-tool"
+                                data-original-title="Collapse"><i class="fa fa-minus"></i></button>
+                        <button title="" data-toggle="tooltip" data-widget="remove" class="btn btn-box-tool"
+                                data-original-title="Remove"><i class="fa fa-times"></i></button>
+                    </div>
+
+                </div>
+                <!-- /.box-header -->
+                <div class="box-body">
+                    <form class="form-horizontal" id="form_listado" name="form_listado" role="form" method="post">
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label" for="numeroDocumento">Numero de documento</label>
+                            <div class="col-sm-4">
+                                {{ form_widget(form.numeroDocumento) }}
+                            </div>
+                            <label class="col-sm-2 control-label" for="matricula">Matricula</label>
+                            <div class="col-sm-4">
+                                {{ form_widget(form.matricula) }}
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label" for="apellido">Apellido</label>
+                            <div class="col-sm-4">
+                                {{ form_widget(form.apellido) }}
+                            </div>
+                            <label class="col-sm-2 control-label" for="situacion">Situacion</label>
+                            <div class="col-sm-4">
+                                {{ form_widget(form.situacion) }}
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-sm-offset-2 col-sm-4">
+                                <button class="btn btn-primary btn-label-left" type="submit" id="btn-filtro-buscar">
+                                    <span>
+                                        <i class="fa fa-filter"></i>
+                                    </span>
+                                    Buscar
+                                </button>
+
+                                <button class="btn btn-default" type="reset">
+                                    <span>
+                                        <i></i>
+                                    </span>
+                                    Limpiar
+                                </button>
+
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="row">
         <div class="col-xs-12">
             <div class="box">
                 <div class="box-header">
-                    <h3 class="box-title">Listado Colegiado</h3>
-
+                    <h3 class="box-title">Listado de Colegiados</h3>
 
                 </div>
                 <!-- /.box-header -->
@@ -24,26 +85,26 @@
                                 <th>Apellido</th>
                                 <th>Nombre</th>
                                 <th>Matricula</th>
-                                {#<th>Fechamatricula</th>
-                                <th>Folio</th>
-                                <th>Libro</th>#}
+                                    {#<th>Fechamatricula</th>
+                                    <th>Folio</th>
+                                    <th>Libro</th>#}
                                 <th>Legajo</th>
                                 <th>Numero documento</th>
                                 <th>Cuilcuit</th>
                                 <th>Fecha nacimiento</th>
-                               {# <th>Matriculafederal</th>
-                                <th>Fechafederal</th>
-                                <th>Librofederal</th>
-                                <th>Foliofederal</th>
-                                <th>Fechainactividad</th>
-                                <th>Cargo</th>
-                                <th>Fechacargo</th>
-                                <th>Fechatitulo</th>
-                                <th>Observacion</th>
-                                <th>Denuncias</th>#}
+                                    {# <th>Matriculafederal</th>
+                                     <th>Fechafederal</th>
+                                     <th>Librofederal</th>
+                                     <th>Foliofederal</th>
+                                     <th>Fechainactividad</th>
+                                     <th>Cargo</th>
+                                     <th>Fechacargo</th>
+                                     <th>Fechatitulo</th>
+                                     <th>Observacion</th>
+                                     <th>Denuncias</th>#}
                                 <th>Telefono 1</th>
-                               {# <th>Telefono2</th>
-                                <th>Telefono3</th>#}
+                                    {# <th>Telefono2</th>
+                                     <th>Telefono3</th>#}
                                 <th>Mail</th>
                                 <th>Acciones</th>
                             </tr>
@@ -57,26 +118,26 @@
                                     <td>{{ entity.apellido }}</td>
                                     <td>{{ entity.nombre }}</td>
                                     <td>{{ entity.matricula }}</td>
-                                   {# <td>{% if entity.fechaMatricula %}{{ entity.fechaMatricula|date('Y-m-d H:i:s') }}{% endif %}</td>
-                                    <td>{{ entity.folio }}</td>
-                                    <td>{{ entity.libro }}</td>#}
+                                    {# <td>{% if entity.fechaMatricula %}{{ entity.fechaMatricula|date('Y-m-d H:i:s') }}{% endif %}</td>
+                                     <td>{{ entity.folio }}</td>
+                                     <td>{{ entity.libro }}</td>#}
                                     <td>{{ entity.legajo }}</td>
                                     <td>{{ entity.numeroDocumento }}</td>
                                     <td>{{ entity.cuilCuit }}</td>
                                     <td>{% if entity.fechaNacimiento %}{{ entity.fechaNacimiento|date('d-m-Y') }}{% endif %}</td>
-                                   {# <td>{{ entity.matriculaFederal }}</td>
-                                    <td>{% if entity.fechaFederal %}{{ entity.fechaFederal|date('Y-m-d H:i:s') }}{% endif %}</td>
-                                    <td>{{ entity.libroFederal }}</td>
-                                    <td>{{ entity.folioFederal }}</td>
-                                    <td>{% if entity.fechaInactividad %}{{ entity.fechaInactividad|date('Y-m-d H:i:s') }}{% endif %}</td>
-                                    <td>{{ entity.cargo }}</td>
-                                    <td>{% if entity.fechaCargo %}{{ entity.fechaCargo|date('Y-m-d H:i:s') }}{% endif %}</td>
-                                    <td>{% if entity.fechaTitulo %}{{ entity.fechaTitulo|date('Y-m-d H:i:s') }}{% endif %}</td>
-                                    <td>{{ entity.observacion }}</td>
-                                    <td>{{ entity.denuncias }}</td>#}
+                                    {# <td>{{ entity.matriculaFederal }}</td>
+                                     <td>{% if entity.fechaFederal %}{{ entity.fechaFederal|date('Y-m-d H:i:s') }}{% endif %}</td>
+                                     <td>{{ entity.libroFederal }}</td>
+                                     <td>{{ entity.folioFederal }}</td>
+                                     <td>{% if entity.fechaInactividad %}{{ entity.fechaInactividad|date('Y-m-d H:i:s') }}{% endif %}</td>
+                                     <td>{{ entity.cargo }}</td>
+                                     <td>{% if entity.fechaCargo %}{{ entity.fechaCargo|date('Y-m-d H:i:s') }}{% endif %}</td>
+                                     <td>{% if entity.fechaTitulo %}{{ entity.fechaTitulo|date('Y-m-d H:i:s') }}{% endif %}</td>
+                                     <td>{{ entity.observacion }}</td>
+                                     <td>{{ entity.denuncias }}</td>#}
                                     <td>{{ entity.telefono1 }}</td>
-                                   {# <td>{{ entity.telefono2 }}</td>
-                                    <td>{{ entity.telefono3 }}</td>#}
+                                    {# <td>{{ entity.telefono2 }}</td>
+                                     <td>{{ entity.telefono3 }}</td>#}
                                     <td>{{ entity.mail }}</td>
                                     <td>
 
