--- a/src/AppBundle/Resources/views/Situacion/index.html.twig
+++ b/src/AppBundle/Resources/views/Situacion/index.html.twig
@@ -1,17 +1,69 @@
-    {% extends 'ThemeBundle:Default:layout_base.html.twig' %}
+{% extends 'ThemeBundle:Default:layout_base.html.twig' %}
 
-    {% block title %}
-        Situacion
-    {% endblock title %}
-
-    {% block content -%}
-
+{% block title %}
+    Situacion
+{% endblock title %}
+{% block content_title %}
+    Situaciones
+{% endblock content_title %}
+{% block content -%}
 
     <div class="row">
         <div class="col-xs-12">
             <div class="box">
+                <div class="box-header with-border">
+                    <h3 class="box-title">Filtros</h3>
+                    <div class="box-tools pull-right">
+                        <button title="" data-toggle="tooltip" data-widget="collapse" class="btn btn-box-tool"
+                                data-original-title="Collapse"><i class="fa fa-minus"></i></button>
+                        <button title="" data-toggle="tooltip" data-widget="remove" class="btn btn-box-tool"
+                                data-original-title="Remove"><i class="fa fa-times"></i></button>
+                    </div>
+
+                </div>
+                <!-- /.box-header -->
+                <div class="box-body">
+                    <form class="form-horizontal" id="form_listado" name="form_listado" role="form" method="post">
+                        <div class="form-group">
+
+                            <label class="col-sm-2 control-label" for="codigo">Codigo</label>
+                            <div class="col-sm-4">
+                                {{ form_widget(form.codigo) }}
+                            </div>
+                            <label class="col-sm-2 control-label" for="descripcion">Descripcion</label>
+                            <div class="col-sm-4">
+                                {{ form_widget(form.descripcion) }}
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <div class="col-sm-offset-2 col-sm-4">
+                                <button class="btn btn-primary btn-label-left" type="submit" id="btn-filtro-buscar">
+                                    <span>
+                                        <i class="fa fa-filter"></i>
+                                    </span>
+                                    Buscar
+                                </button>
+
+                                <button class="btn btn-default" type="reset">
+                                    <span>
+                                        <i></i>
+                                    </span>
+                                    Limpiar
+                                </button>
+
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xs-12">
+            <div class="box">
                 <div class="box-header">
-                    <h3 class="box-title">Listado Situacion</h3>
+                    <h3 class="box-title">Listado de Situaciones</h3>
 
 
                 </div>
@@ -20,41 +72,41 @@
                     <table class="data-table table table-bordered table-striped">
                         <thead>
                             <tr>
-                                    <th>Id</th>
-                                    <th>Codigo</th>
-                                    <th>Descripcion</th>
+                                <th>Id</th>
+                                <th>Codigo</th>
+                                <th>Descripcion</th>
                                 <th>Acciones</th>
                             </tr>
                         </thead>
                         <tbody>
                             {% for entity in entities %}
-                            <tr>
-                                        <td>
-                                            <a href="{{ path('situacion_show', { 'id': entity.id }) }}">{{ entity.id }}</a>
-                                        </td>
-                                        <td>{{ entity.codigo }}</td>
-                                        <td>{{ entity.descripcion }}</td>
-                                        <td>
+                                <tr>
+                                    <td>
+                                        <a href="{{ path('situacion_show', { 'id': entity.id }) }}">{{ entity.id }}</a>
+                                    </td>
+                                    <td>{{ entity.codigo }}</td>
+                                    <td>{{ entity.descripcion }}</td>
+                                    <td>
 
-                        <a class="btn btn-default" href="{{ path('situacion_show', { 'id': entity.id }) }}"><i class="fa fa-eye"></i></a>
+                                        <a class="btn btn-default" href="{{ path('situacion_show', { 'id': entity.id }) }}"><i class="fa fa-eye"></i></a>
 
-                        <a class="btn btn-default" href="{{ path('situacion_edit', { 'id': entity.id }) }}"><i class="fa fa-edit"></i></a>
+                                        <a class="btn btn-default" href="{{ path('situacion_edit', { 'id': entity.id }) }}"><i class="fa fa-edit"></i></a>
 
-                                        </td>
-                            </tr>
+                                    </td>
+                                </tr>
                             {% endfor %}
                         </tbody>
                     </table>
                 </div>
                 <div class="box-footer">
-                    
-                        <a class="btn btn-primary" href="{{ path('situacion_new') }}">
-                            Nuevo
-                        </a>
 
-                                    </div>
+                    <a class="btn btn-primary" href="{{ path('situacion_new') }}">
+                        Nuevo
+                    </a>
+
+                </div>
             </div>
         </div>
     </div>
     {{ knp_pagination_render(entities) }}
-    {% endblock %}
+{% endblock %}
