--- a/src/UbicacionBundle/Resources/views/Localidad/edit.html.twig
+++ b/src/UbicacionBundle/Resources/views/Localidad/edit.html.twig
@@ -1,31 +1,30 @@
-    {% extends 'ThemeBundle:Default:layout_base.html.twig' %}
+{% extends 'ThemeBundle:Default:layout_base.html.twig' %}
 {% set title = 'Edicion Localidad' %}
 {% block title %}
-{{ title }}
+    {{ title }}
+{% endblock %}
+{% block content_title %}
+  Formulario de Edicion
 {% endblock %}
 
-    {% block content -%}
+{% block content -%}
 
-    <h4 class="page-header">Localidad</h4>
     <div class="row">
         <div class="col-xs-12 col-sm-12">            
-            <div class="box-header">
-                <div class="box-name ui-draggable-handle">
-                    <i class="fa fa-search"></i>
-                    <span>Alta de Localidad</span>
+            <div class="box box-primary">
+                <div class="box-header with-border">
+                    <h3 class="box-title">Localidad</h3>
                 </div>
-            </div>
-            <div class="box-content">
-                <h4 class="page-header">{{ title }}</h4>
                 <form action="{{ path('localidad_update', { 'id': entity.id }) }}" role="form" method="post">
                     <div class="box-body">
                         {{ form_widget(form) }}
                     </div>
-                    <div class="form-group">
-                        <div class="col-sm-9 col-sm-offset-3">
-                            <button class="btn btn-primary" type="submit"><i class="fa fa-save"></i> Guardar</button>
+                    <div class="box-footer">
+                        <div class="pull-right">
+                            <button class="btn btn-primary" type="submit"><i class="fa fa-save"></i> Actualizar
+                            </button>
 
-                            <a class="btn btn-success" href="{{ path('localidad') }}">
+                            <a class="btn btn-default" href="{{ path('localidad') }}">
                                 Volver
                             </a>
 
@@ -39,6 +38,6 @@
     </div>
 
 
-            {% endblock %}
+{% endblock %}
 
 
