--- a/src/UbicacionBundle/Resources/views/Localidad/new.html.twig
+++ b/src/UbicacionBundle/Resources/views/Localidad/new.html.twig
@@ -1,30 +1,29 @@
-    {% extends 'ThemeBundle:Default:layout_base.html.twig' %}
+{% extends 'ThemeBundle:Default:layout_base.html.twig' %}
 {% set title = 'Alta Localidad' %}
 {% block title %}
-{{ title }}
+    {{ title }}
 {% endblock %}
-    {% block content -%}
+{% block content_title %}
+    Formulario de Alta
+{% endblock %}
+{% block content -%}
 
-    <h4 class="page-header">Localidad</h4>
     <div class="row">
         <div class="col-xs-12 col-sm-12">            
-            <div class="box-header">
-                <div class="box-name ui-draggable-handle">
-                    <i class="fa fa-search"></i>
-                    <span>Alta de Localidad</span>
+            <div class="box box-primary">
+                <div class="box-header with-border">
+                    <h3 class="box-title">Localidad</h3>
                 </div>
-            </div>
-            <div class="box-content">
-                <h4 class="page-header">{{ title }}</h4>
                 <form class="form-horizontal" role="form" action="{{ path('localidad_create') }}" role="form" method="post">
                     <div class="box-body">
                         {{ form_widget(form) }}
                     </div>
-                    <div class="form-group">
-                        <div class="col-sm-9 col-sm-offset-3">
-                            <button class="btn btn-primary" type="submit"><i class="fa fa-save"></i> Guardar</button>
+                    <div class="box-footer">
+                        <div class="pull-right">
+                            <button class="btn btn-primary" type="submit"><i class="fa fa-save"></i> Guardar
+                            </button>
 
-                            <a class="btn btn-success" href="{{ path('localidad') }}">
+                            <a class="btn btn-default" href="{{ path('pais') }}">
                                 Volver
                             </a>
 
@@ -38,4 +37,4 @@
     </div>
 
 
-            {% endblock %}
+{% endblock %}
