--- a/src/UbicacionBundle/Resources/views/Pais/edit.html.twig
+++ b/src/UbicacionBundle/Resources/views/Pais/edit.html.twig
@@ -3,29 +3,28 @@
 {% block title %}
 {{ title }}
 {% endblock %}
+{% block content_title %}
+Formualrio de Edicion
+{% endblock %}
 
     {% block content -%}
 
-    <h4 class="page-header">Pais</h4>
     <div class="row">
         <div class="col-xs-12 col-sm-12">            
-            <div class="box-header">
-                <div class="box-name ui-draggable-handle">
-                    <i class="fa fa-search"></i>
-                    <span>Alta de Pais</span>
+           <div class="box box-primary">
+                <div class="box-header with-border">
+                    <h3 class="box-title">Pais</h3>
                 </div>
-            </div>
-            <div class="box-content">
-                <h4 class="page-header">{{ title }}</h4>
                 <form action="{{ path('pais_update', { 'id': entity.id }) }}" role="form" method="post">
                     <div class="box-body">
                         {{ form_widget(form) }}
                     </div>
-                    <div class="form-group">
-                        <div class="col-sm-9 col-sm-offset-3">
-                            <button class="btn btn-primary" type="submit"><i class="fa fa-save"></i> Guardar</button>
+                    <div class="box-footer">
+                        <div class="pull-right">
+                            <button class="btn btn-primary" type="submit"><i class="fa fa-save"></i> Actualizar
+                            </button>
 
-                            <a class="btn btn-success" href="{{ path('pais') }}">
+                            <a class="btn btn-default" href="{{ path('pais') }}">
                                 Volver
                             </a>
 
