--- a/src/UbicacionBundle/Resources/views/Pais/index.html.twig
+++ b/src/UbicacionBundle/Resources/views/Pais/index.html.twig
@@ -1,91 +1,114 @@
-    {% extends 'ThemeBundle:Default:layout_base.html.twig' %}
+{% extends 'ThemeBundle:Default:layout_base.html.twig' %}
 {% set title = 'Pais' %}
 {% block title %}
-{{ title }}
+    {{ title }}
 {% endblock %}
-    {% block content -%}
-    <h4 class="page-header">{{ title }}</h4>
-    {#<div class="row">
+{% block content_title %}
+    Paises
+{% endblock %}
+{% block content -%}
+    <div class="row">
         <div class="col-xs-12">
-            <div class="box ui-draggable ui-droppable">
-                <div class="box-header">
-                    <div class="box-name ui-draggable-handle">
-                        <i class="fa fa-search"></i>
-                        <span>Filtros</span>
+            <div class="box">
+                <div class="box-header with-border">
+                    <h3 class="box-title">Filtros</h3>
+                    <div class="box-tools pull-right">
+                        <button title="" data-toggle="tooltip" data-widget="collapse" class="btn btn-box-tool"
+                                data-original-title="Collapse"><i class="fa fa-minus"></i></button>
+                        <button title="" data-toggle="tooltip" data-widget="remove" class="btn btn-box-tool"
+                                data-original-title="Remove"><i class="fa fa-times"></i></button>
                     </div>
-                </div>
-                <div class="box-content no-padding">
-                    <form class="form-horizontal" role="form">
 
-                        <div class="clearfix"></div>
+                </div>
+                <!-- /.box-header -->
+                <div class="box-body">
+                    <form class="form-horizontal" id="form_listado" name="form_listado" role="form" method="post">
+                        <div class="form-group">
+
+                            <label class="col-sm-2 control-label" for="codigo">Codigo</label>
+                            <div class="col-sm-4">
+                                {{ form_widget(form.codigo) }}
+                            </div>
+                            <label class="col-sm-2 control-label" for="descripcion">Descripcion</label>
+                            <div class="col-sm-4">
+                                {{ form_widget(form.descripcion) }}
+                            </div>
+                        </div>
+
                         <div class="form-group">
                             <div class="col-sm-offset-2 col-sm-4">
-                                <button class="btn btn-primary btn-label-left" type="submit">
+                                <button class="btn btn-primary btn-label-left" type="submit" id="btn-filtro-buscar">
                                     <span>
                                         <i class="fa fa-filter"></i>
                                     </span>
                                     Buscar
                                 </button>
+
                                 <button class="btn btn-default" type="reset">
                                     <span>
                                         <i></i>
                                     </span>
                                     Limpiar
                                 </button>
-                            </div>                            
+
+                            </div>
                         </div>
                     </form>
                 </div>
             </div>
         </div>
-    </div>#}
+    </div>
     <div class="row">
         <div class="col-xs-12">
-            <div class="box ui-draggable ui-droppable">
+            <div class="box">
                 <div class="box-header">
-                    <div class="box-name ui-draggable-handle">
-                        <i class="fa fa-table"></i>
-                        <span>Listado {{ title }}</span>
-                    </div>
-                </div>
-                <div class="box-content no-padding">
-                    <div id="datatable-1_wrapper" class="dataTables_wrapper form-inline">
-                        <table  class="data-table table table-bordered table-striped table-hover table-heading table-datatable dataTable datatable-1" role="grid" aria-describedby="datatable-1_info">
-                            <thead>
-                                <tr role="row">                                    <th class="sorting_asc" tabindex="0" aria-controls="datatable-1" rowspan="1" colspan="1" style="width: 46px;" aria-sort="ascending" aria-label="Id">Id</th>                                    <th class="sorting" tabindex="0" aria-controls="datatable-1" rowspan="1" colspan="1" style="width: 200px;" aria-label="Descripcion">Descripcion</th>                                    <th class="sorting" tabindex="0" aria-controls="datatable-1" rowspan="1" colspan="1" style="width: 200px;" aria-label="Codigopais">Codigopais</th>                                    <th class="sorting" tabindex="0" aria-controls="datatable-1" rowspan="1" colspan="1" style="width: 200px;" aria-label="Codigoarea">Codigoarea</th>                                    <th class="sorting" tabindex="0" aria-controls="datatable-1" rowspan="1" colspan="1" style="width: 200px;" aria-label="Creado">Creado</th>                                    <th class="sorting" tabindex="0" aria-controls="datatable-1" rowspan="1" colspan="1" style="width: 200px;" aria-label="Actualizado">Actualizado</th>                                    <th class="" tabindex="0" aria-controls="datatable-1" rowspan="1" colspan="1" style="width: 200px;" aria-label="">Actions</th>
+                    <h3 class="box-title">Listado de Paises</h3>
 
-                                </tr>
-                            </thead>
-                            <tbody role="alert" aria-live="polite" aria-relevant="all">
-                                {% for entity in entities %}
-                                <tr class="{% if loop.index is odd %} odd {% else %} even {% endif %}">
-                                    <td>{{ entity.id }}</td>
-                                    <td>{{ entity.descripcion }}</td>
-                                    <td>{{ entity.codigoPais }}</td>
-                                    <td>{{ entity.codigoArea }}</td>
-                                    <td>{% if entity.creado %}{{ entity.creado|date('d/m/Y H:i:s') }}{% endif %}</td>
-                                    <td>{% if entity.actualizado %}{{ entity.actualizado|date('d/m/Y H:i:s') }}{% endif %}</td>
+
+                </div>
+                <!-- /.box-header -->
+                <div class="box-body">
+                    <table class="data-table table table-bordered table-striped">
+                        <thead>
+                            <tr>
+                                <th>Id</th>
+                                <th>Codigo</th>
+                                <th>Desccripcion</th>
+                                <th>Codigo Area</th>
+                                <th>Acciones</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for entity in entities %}
+                                <tr>
                                     <td>
-                                                                                <a class="btn btn-default" href="{{ path('pais_edit', { 'id': entity.id }) }}"><i class="fa fa-fw fa-edit"></i></a>
+                                        <a href="{{ path('calle_show', { 'id': entity.id }) }}">{{ entity.id }}</a>
+                                    </td>
+                                    <td>{{ entity.codigoPais }}</td>
+                                    <td>{{ entity.descripcion }}</td>
+                                    <td>{{ entity.codigoArea }}</td>
+                                    <td>
+
+                                        <a class="btn btn-default" href="{{ path('pais_show', { 'id': entity.id }) }}"><i class="fa fa-eye"></i></a>
+
+                                        <a class="btn btn-default" href="{{ path('pais_edit', { 'id': entity.id }) }}"><i class="fa fa-edit"></i></a>
+
                                     </td>
                                 </tr>
-                                {% endfor %}
-                            </tbody>
-                        </table>
-                        <div class="box-content">
-                            {{ knp_pagination_render(entities) }}
-                        </div>
-                    </div>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+                <div class="box-footer">
+
+                    <a class="btn btn-primary" href="{{ path('pais_new') }}">
+                        Nuevo
+                    </a>
+
                 </div>
             </div>
-
-            
-                <a class="btn btn-primary" href="{{ path('pais_new') }}">
-                    Nuevo
-                </a>
-
-            
         </div>
     </div>
+    {{ knp_pagination_render(entities) }}
 
-    {% endblock %}
+{% endblock %}
