--- a/src/UbicacionBundle/Resources/views/Provincia/show.html.twig
+++ b/src/UbicacionBundle/Resources/views/Provincia/show.html.twig
@@ -1,44 +1,64 @@
-    {% extends 'ThemeBundle:Default:layout_base.html.twig' %}
+{% extends 'ThemeBundle:Default:layout_base.html.twig' %}
 
-    {% block content -%}
-    <h1>Provincia</h1>
+{% block content_title %}
+    Resumen
+{% endblock %}
 
-    <table class="record_properties">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ entity.id }}</td>
-            </tr>
-            <tr>
-                <th>Descripcion</th>
-                <td>{{ entity.descripcion }}</td>
-            </tr>
-            <tr>
-                <th>Codigo</th>
-                <td>{{ entity.codigo }}</td>
-            </tr>
-            <tr>
-                <th>Creado</th>
-                <td>{{ entity.creado|date('d/m/Y H:i:s') }}</td>
-            </tr>
-            <tr>
-                <th>Actualizado</th>
-                <td>{{ entity.actualizado|date('d/m/Y H:i:s') }}</td>
-            </tr>
-        </tbody>
-    </table>
+{% block content -%}
+    <div class="row">
+        <div class="col-md-6">
+            <div class="box box-primary">
+                <div class="box-header with-border">
+                    <h3 class="box-title">Provincia</h3>
+                </div>
+                <div class="box-body">
+                    <table class="record_properties">
+                        <tbody>
+                            <tr>
+                                <th>Id</th>
+                                <td>{{ entity.id }}</td>
+                            </tr>
+                            <tr>
+                                <th>Codigo</th>
+                                <td>{{ entity.codigo }}</td>
+                            </tr>
+                            <tr>
+                                <th>descripcion</th>
+                                <td>{{ entity.descripcion }}</td>
+                            </tr>
+                            <tr>
+                                <th>Pais</th>
+                                <td>{{ entity.pais }}</td>
+                            </tr>
+                             
+                            <tr>
+                                <th>Creado</th>
+                                <td>{{ entity.creado|date('Y-m-d H:i:s') }}</td>
+                            </tr>
+                            <tr>
+                                <th>Actualizado</th>
+                                <td>{{ entity.actualizado|date('Y-m-d H:i:s') }}</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
 
-        <ul class="record_actions">
-    <li>
-        <a href="{{ path('provincia') }}">
-            Back to the list
-        </a>
-    </li>
-    <li>
-        <a href="{{ path('provincia_edit', { 'id': entity.id }) }}">
-            Edit
-        </a>
-    </li>
-    <li>{{ form(delete_form) }}</li>
-</ul>
-    {% endblock %}
+
+                <div class="box-footer">
+                    <a class="btn btn-default" href="{{ path('provincia') }}">
+                        Volver
+                    </a>
+
+
+                    <a class="btn btn-primary" href="{{ path('provincia_edit', { 'id': entity.id }) }}">
+                        Editar
+                    </a>
+
+                </div>
+            </div>
+        </div>
+    </div>
+    {#    {{ form(delete_form) }}#}
+
+
+{% endblock %}
