--- a/src/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/AppBundle/Resources/views/Default/index.html.twig
@@ -3,18 +3,18 @@
 {% block content -%}
 
     <div class="row">
-        <div class="col-xs-12">
-            <div class="col-lg-offset-2">
+{#        <div class="col-xs-12">#}
+           {# <div class="text-center">
                 <h2>Colegio de Abogados de la Provincia de Misiones</h2>
 
-            </div
-            <div class="col-xs-12">
-                <div class="col-lg-offset-4">
+            </div>#}
+{#            <div class="col-xs-12">#}
+<div style="margin: 0 auto;">
                     <img class="img-responsive pad" alt="logo empresa"
-                         src="{{ asset('/bundles/theme/images/logo.jpg') }}">
+                         src="{{ asset('/bundles/theme/images/logo.png') }}">
                 </div>
-            </div>
-        </div>
+{#            </div>#}
+{#        </div>#}
     </div>
 
 
