se arregla calendario en creacion de documentos

--- a/src/AppBundle/Resources/views/Colegiado/editExpediente.html.twig
+++ b/src/AppBundle/Resources/views/Colegiado/editExpediente.html.twig
@@ -23,7 +23,7 @@
                     itemCant{{edit_form.documentos.vars.id}}++;
                     newTr.appendTo(itemList);
                 }
-//                                            inicializarFecha();
+                                                inicializarFecha();
                 $(this).trigger('clicked');
                 return false;
             });
