--- a/src/UtilBundle/Resources/views/Form/fields.html.twig
+++ b/src/UtilBundle/Resources/views/Form/fields.html.twig
@@ -149,7 +149,7 @@
                                                 itemCant{{form.vars.id}}++;
                                                 newTr.appendTo(itemList);
                                             }
-//                                            inicializarFecha();
+                                           inicializarFecha();
                                             $(this).trigger('clicked');
                                             return false;
                                         });
